feat: switched to libs.versions.toml, now for java 21, added adventure for text components, more migrated to kotlin fix: fixed config reloading for auto-repair, fixed permission condition for repair chore: removed soundhandler, particle api, webhook, and crash dump